opam-version: "1.2"
maintainer: "Christophe Troestler <Christophe.Troestler@umons.ac.be>"
authors: [ "Christophe Troestler <Christophe.Troestler@umons.ac.be>" ]
license: "LGPL-3.0 with OCaml linking exception"
homepage: "https://github.com/Chris00/ocaml-docker"
dev-repo: "https://github.com/Chris00/ocaml-docker.git"
bug-reports: "https://github.com/Chris00/ocaml-docker/issues"
build: [
  [ "jbuilder" "subst" ] {pinned}
  [ "jbuilder" "build" "-p" name "-j" jobs ]
]
build-test: [["jbuilder" "runtest" "-p" name "-j" jobs]]
depends: [
  "jbuilder" {build}
  "base-bytes"
  "base-unix"
  "yojson"
]
available: [ ocaml-version >= "4.02.3" ]
