opam-version: "2.0"
maintainer: "Christophe Troestler <Christophe.Troestler@umons.ac.be>"
authors: [ "Christophe Troestler <Christophe.Troestler@umons.ac.be>" ]
license: "ISC"
homepage: "https://github.com/Chris00/ocaml-docker"
dev-repo: "git+https://github.com/Chris00/ocaml-docker.git"
bug-reports: "https://github.com/Chris00/ocaml-docker/issues"
doc: "https://Chris00.github.io/ocaml-docker/doc"
build: [
  ["dune" "subst"] {pinned}
  ["dune" "build" "-p" name "-j" jobs]
]
depends: [
  "ocaml" {>= "4.03.0"}
  "dune" {build}
  "base-bytes"
  "base-unix"
  "yojson" {>= "1.6.0"}
]
synopsis: "Binding to the Docker Remote API"
description: """
Control Docker <https://www.docker.com/> containers using the remote API."""
